Correccion de APIs